.provarCaches/00D410000011HE0EAM/objects/rstkf__statementrunfilter__c.object
<CustomObject>
    <description>statementrunfilter__c</description>
    <fields>
        <fullName>rstkf__alldims__c</fullName>
        <defaultValue>false</defaultValue>
        <label>alldims</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__alldivs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>alldivs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__allprojs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>allprojs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__allvals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>allvals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__colno__c</fullName>
        <label>colno</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__dimfilter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dimfilter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__divfilter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>divfilter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__filterdimnum__c</fullName>
        <label>filterdimnum</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__filterdimval__c</fullName>
        <label>filterdimval</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__filterdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>statementrunfilter</relationshipLabel>
        <relationshipName>statementrunfilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__filterproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Project Master</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>statementrunfilter</relationshipLabel>
        <relationshipName>statementrunfilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__lineno__c</fullName>
        <label>lineno</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__nodim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>nodim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__nodiv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>nodiv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__noproj__c</fullName>
        <defaultValue>false</defaultValue>
        <label>noproj</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__onedim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>onedim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__onediv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>onediv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__oneproj__c</fullName>
        <defaultValue>false</defaultValue>
        <label>oneproj</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__oneval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>oneval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__projfilter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>projfilter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__statementrun__c</fullName>
        <label>ZZ Statement Run</label>
        <referenceTo>rstkf__statementrun__c</referenceTo>
        <relationshipLabel>statementrunfilter</relationshipLabel>
        <relationshipName>statementrunfilters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>statementrunfilter</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>statementrunfilter</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>